<resources>
    <string name="app_name">App</string>
    <string name="hombre">hombre</string>
    <string name="mujer">mujer</string>
    <string name="sample_string">Rutina \n Diaria</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_perfil">activity_perfil</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="creador">Anónimo</string>
    <string name="lunes">Monday</string>
    <string name="martes">Tuesday</string>
    <string name="miercoles">Wednesday</string>
    <string name="jueves">Thursday</string>
    <string name="viernes">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sunday</string>
    <string name="todo_tiempo_sec">All selected in seconds</string>
    <string name="tiempo_insertar">Insert Time</string>
    <string name="tuesday">Tuesday</string>
    <string name="rutinas_hechas">Add an existing routine</string>
    <string name="rutinas_crear">Create a routine</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="pro">Pro</string>
    <string name="amateur">Amateur</string>
    <string name="beginner">Beginner</string>
    <string name="choose_routine_name">Choose Routine Name</string>
    <string name="my_routine_name">My Routine Name</string>
    <string name="prensa">Prensa</string>
    <string name="series">Series:</string>
    <string name="_5">5</string>
    <string name="repetitions">Repetitions:</string>
    <string name="_15">15</string>
    <string name="info">INFO</string>
    <string name="ok">OK</string>
    <string name="excersice_explanation">Excersice Explanation</string>
    <string name="icon_barbell">icon barbell</string>
    <string name="nete">ÚNETE</string>
    <string name="aceptas_el_reto">¿Aceptas el reto?</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">password</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="unete_ahora">UNETE AHORA</string>
    <string name="tiempo">Tiempo:</string>
    <string name="_2_semanas">2 semanas</string>
    <string name="edit">Edit</string>
    <string name="subirfoto">SubirFoto</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="sets">Sets</string>
    <string name="done">DONE</string>
    <string name="you_don_t_need_to_fill_all_blanks">You don´t need to fill all blanks</string>
    <string name="jorge_studio_android_com">jorge.studio@android.com</string>
    <string name="_4_series_12_rep">4 series, 12 rep.</string>
    <string name="curl">Curl</string>
    <string name="exercise_picture">Exercise Picture</string>
    <string name="jorge_rodriguez">Jorge Rodriguez</string>
    <string name="peso_60_kg">Peso: 60 kg</string>
    <string name="grasa_corporal_15">Grasa Corporal: 15%</string>
    <string name="correo">Correo</string>
    <string name="j_gmail_com">j@gmail.com</string>

</resources>
