<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/todo_tiempo_sec"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:layout_width="100dp"
                android:inputType="numberDecimal"
                android:hint="@string/tiempo_insertar"
                android:layout_height="100dp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lunes"
                    android:text="@string/lunes"
                    android:onClick="pasar_dia"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/martes"
                    android:text="@string/martes"
                    android:onClick="pasar_dia"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/miercoles"
                    android:text="@string/miercoles"
                    android:onClick="pasar_dia"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/jueves"
                    android:text="@string/jueves"
                    android:onClick="pasar_dia"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/viernes"
                    android:text="@string/viernes"
                    android:onClick="pasar_dia"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sabado"
                    android:text="@string/sabado"
                    android:onClick="pasar_dia"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/domingo"
                    android:text="@string/domingo"
                    android:onClick="pasar_dia"/>
            </RadioGroup>



        </LinearLayout>
        <Button
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:id="@+id/done"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="DONE"
            style="@style/RoundedButton"
            android:gravity="center"/>


    </LinearLayout>


    <include
        layout="@layout/app_bar_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        layout="@layout/navigation_menu"/>

</android.support.v4.widget.DrawerLayout>
