<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <ImageView
                android:id="@+id/exerciseImage"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/exercise_picture"
                android:src="@drawable/prueba"/>

            <TextView
                android:id="@+id/exerciseNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/prensa"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="40sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/seriesFieldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/series"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/seriesNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="20dp"
                    android:text="@string/_5"
                    android:textColor="@color/colorWhite"
                    android:textSize="35sp"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repetitionsFieldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/repetitions"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/repetitionsNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/_15"
                    android:textColor="@color/colorWhite"
                    android:textSize="35sp"/>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/edit_text_style"
            android:text="@string/info"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/edit_text_style"
            android:text="@string/ok"
            android:textSize="18sp"/>

    </LinearLayout>

    <include
        layout="@layout/app_bar_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <include
        layout="@layout/navigation_menu"/>


</android.support.v4.widget.DrawerLayout>
