<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/jorge"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombrePerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jorge_rodriguez"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"/>

                <EditText
                    android:id="@+id/pesol_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_60_kg"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/grasa_corporal_15"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_black"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/correo"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/j_gmail_com"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/app_bar_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <include layout="@layout/navigation_menu"/>


</android.support.v4.widget.DrawerLayout>